# hg2-item-parser

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
src/hg2_item_parser/: __init__.py  __main__.py  cli.py  data_loader.py  enums.py  exceptions.py  info_parser.py  item_parser.py  models.py  property_parser.py  skill_parser.py  text_parser.py  tsvreader.py  types_.py  unificator.py  utils.py
