[project]
name = "hg2-item-parser"
description = "Python package for parsing Houkai Gakuen 2 items data"
readme = "README.md"
requires-python = ">=3.12,<4.0"
dynamic = ["version"]
dependencies = [
    "requests<3.0.0,>=2.32.3",
    "tqdm<5.0.0,>=4.66.6",
    "typer<1.0.0,>=0.12.5",
]

[project.scripts]
hg2-item-parser = "hg2_item_parser.__main__:main"

[tool.uv]
dev-dependencies = [
    "mypy<2.0.0,>=1.12.0",
    "pre-commit<5.0.0,>=4.0.1",
    "ruff>=0.8.2,<1.0.0",
    "types-requests>=2.32.0.20241016",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.mypy]
strict = true
ignore_missing_imports = true
exclude = [".venv"]

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "N", # pep8-naming
    "UP",  # pyupgrade
    "TRY", # tryceratops
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "EM", # flake8-errmsg
    "FA", # flake8-future-annotations
    "PT", # flake8-pytest-style
    "T20", # flake8-print
    "ICN", # flake8-import-conventions
    "PIE", # flake8-pie
    "ANN", # flake8-annotations
    "SIM", # flake8-simplify
    "TID", # flake8-tidy-imports
    "ARG", # flake8-unused-arguments
    "PTH", # flake8-use-pathlib
    "ERA001", # commented-out-code
    "RUF001", # ambiguous-unicode-character-string
    "RUF003", # ambiguous-unicode-character-comment
]
ignore = [
    "ANN204", # missing-return-type-special-method (dunder methods)
    "ANN401", # any-type
    "B904", # raise-without-from-inside-except
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.hatch.version]
path = "src/hg2_item_parser/__init__.py"
